--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "moleculer-repl": "^0.3.0"
   },
   "dependencies": {
+    "moleculer": "^0.11.0",
     "moleculer-web": "^0.5.0",
-    "moleculer": "^0.11.0"
+    "request": "^2.83.0",
+    "robust-point-in-polygon": "^1.0.3"
   },
   "engines": {
     "node": ">= 6.x.x"
