--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "moleculer": "^0.11.0",
     "moleculer-web": "^0.5.0",
+    "point-in-polygon": "^1.0.1",
     "request": "^2.83.0",
     "robust-point-in-polygon": "^1.0.3"
   },
