--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moleculer-web": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "robust-point-in-polygon": "^1.0.3"
   },
   "engines": {
